# mock-models

./: .gitignore  AGENTS.md  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
mocklm/: .containerignore  Containerfile  Makefile  pyproject.toml
mocklm/deploy/k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
mocklm/deploy/k8s/overlays/dev/: kustomization.yaml
mocklm/deploy/kserve/base/: inferenceservice.yaml  kustomization.yaml
mocklm/deploy/kserve/overlays/dev/: kustomization.yaml
mocklm/src/mocklm/: colors.py  config.py  metrics.py  models.py  server.py
mocklm/src/mocklm/modes/: __init__.py  base.py  color.py  describe.py  detect.py  echo.py  eliza.py  eliza_script.py  scenario.py  static.py
mocklm/tests/: test_api.py  test_config.py  test_eliza.py  test_metrics.py  test_modes.py  test_multimodal.py  test_openai_sdk.py
openspec/changes/add-prometheus-metrics/: design.md  proposal.md  tasks.md
openspec/changes/add-prometheus-metrics/specs/prometheus-metrics/: spec.md
openspec/changes/full-eliza-algorithm/: design.md  proposal.md  tasks.md
openspec/changes/full-eliza-algorithm/specs/eliza-engine/: spec.md
openspec/changes/full-eliza-algorithm/specs/eliza-script/: spec.md
openspec/changes/mock-models-init/: design.md  proposal.md  tasks.md
openspec/changes/mock-models-init/specs/container-packaging/: spec.md
openspec/changes/mock-models-init/specs/k8s-deployment/: spec.md
openspec/changes/multimodal-vision-modes/: design.md  proposal.md  tasks.md
(+10 files in other folders)
