[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mocklm"
version = "0.1.0"
description = "Lightweight mock model server implementing the OpenAI Chat Completions API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "Pillow>=11.0",
]

[project.scripts]
mocklm = "mocklm.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mocklm"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "openai>=1.60",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
